@@ -1,5 +1,7 @@
 = master
 
+* Deprecate the :format, :opt, and :optd default symbol matchers in the symbol_matchers plugin (jeremyevans)
+
 * Deprecate use of placeholders in string matchers by default, add placeholder_string_matchers plugin for it (jeremyevans)
 
 = 2.28.0 (2017-07-14)
